k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: asset-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: acrasset28526.azurecr.io/asset-backend:v1
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: backend-data
              mountPath: /app/data
      volumes:
        - name: backend-data
          persistentVolumeClaim:
            claimName: backend-data-pvc
